<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="2"
        android:title="@string/menu_refresh"
        android:icon="@drawable/ic_refresh"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bainil_app"
        android:orderInCategory="2"
        android:title="@string/menu_bainil_app"
        android:icon="@drawable/ic_bainil"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/nav_setting"
        android:visible="false"
        app:showAsAction="never" />
</menu>
