<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="space.limerainne.i_bainil_u.view.main.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/btn_event_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="64dp"/>
        <Button
            android:id="@+id/btn_nav_browse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_browse"/>
        <Button
            android:id="@+id/btn_nav_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_wishlist"/>
        <Button
            android:id="@+id/btn_nav_purchased"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_purchased"/>

    </LinearLayout>

</FrameLayout>
